# Httpd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Docs.md  README.md  httpd.sln
httpd/: httpd.vcxproj
httpd/include/: httpd.hh
httpd/include/api/: FileLogger.hh  HttpConf.h  HttpRequest.hpp  HttpResponse.hpp  Logger.hh  Utils.hh
httpd/include/cache/: LRUCache.hpp
httpd/include/exception/: cache_exception.hh  conf_exception.hh  custom_exception.hh  http_exception.hh  io_exception.hh  socket_exception.hh  splitter_exception.hh  thread_exception.hh
httpd/include/httpEngine/: Engine.hh  Grammar.hh  Request.hh  Response.hh  Uri.hh
httpd/include/io/: ioReader.hh  ioWriter.hh
httpd/include/network/: ISocket.h  SocketUnix.h  SocketWindows.h
httpd/include/parser/: YamlParser.hpp
httpd/include/server/: HttpServerUnix.hh  HttpServerWindows.hh  IHttpServer.hh
httpd/include/system/: dirent.h
httpd/include/threadPool/: SocketQueue.hpp  TaskQueue.hpp  ThreadDelegator.hh  ThreadGuard.hh
httpd/include/utils/: Converter.hh  DateTime.hh  ForlderView.hh  RequestExtractor.hh  Splitter.hh  String.hh  Trimmer.hh  Uri.hh
httpd/include/worker/: Worker.hh  WorkerManager.hpp
httpd/src/: httpd.cpp
httpd/src/api/: FileLogger.cpp  HttpConf.cpp  HttpRequest.cpp  HttpResponse.cpp  Logger.cpp
httpd/src/exception/: custom_exception.cpp  socket_exception.cpp  thread_exception.cpp
httpd/src/httpEngine/: Engine.cpp  Grammar.cpp  Request.cpp  Response.cpp
httpd/src/httpEngine/Methods/: Get.cpp  Head.cpp
httpd/src/io/: ioReader.cpp  ioWriter.cpp
httpd/src/network/: SocketUnix.cpp  SocketWindows.cpp
httpd/src/parser/: ModuleLoaderUnix.cpp  ModuleLoaderWindows.cpp  YamlParser.cpp
httpd/src/server/: HttpServerUnix.cpp  HttpServerWindows.cpp
httpd/src/threadPool/: ThreadDelegator.cpp  ThreadGuard.cpp
httpd/src/utils/: Converter.cpp  FolderView.cpp  RequestExtractor.cpp  Splitter.cpp  String.cpp  Trimmer.cpp  Uri.cpp
httpd/src/worker/: Worker.cpp
modules/php-cgi/: CMakeLists.txt  phpcgiModule.cpp  phpcgiModule.hpp
modules/php-cgi/utils/: Splitter.cpp  Splitter.hh  Trimmer.cpp  Trimmer.hh  Uri.cpp  Uri.hh
test/ressources/: index.html  zia.yml
test/src/cache/: LRUCache.cpp
test/src/engine/: Engine.cpp
test/src/exception/: StackTrace.cpp
test/src/io/: ioReader.cpp
test/src/threadpool/: TaskQueue.cpp  ThreadDelegator.cpp  ThreadGuard.cpp
test/src/tools/: ConfImpl.hpp  LoggerImpl.hpp  RequestGenerator.hpp  SocketImpl.hpp  TaskQueue.hpp
test/src/utils/: RequestsSplitter.cpp
